load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "config.go",
        "filestuff.go",
        "local.go",
        "main.go",
        "publish.go",
        "resolve.go",
    ],
    importpath = "github.com/google/go-containerregistry/cmd/ko",
    visibility = ["//visibility:private"],
    deps = [
        "//authn:go_default_library",
        "//ko/build:go_default_library",
        "//ko/publish:go_default_library",
        "//ko/resolve:go_default_library",
        "//name:go_default_library",
        "//v1:go_default_library",
        "//v1/daemon:go_default_library",
        "//v1/remote:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)

go_binary(
    name = "ko",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
