load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/go-containerregistry/cmd/pusher",
    visibility = ["//visibility:private"],
    deps = [
        "//authn:go_default_library",
        "//name:go_default_library",
        "//v1:go_default_library",
        "//v1/daemon:go_default_library",
        "//v1/remote:go_default_library",
        "//v1/tarball:go_default_library",
    ],
)

go_binary(
    name = "pusher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
