load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "append.go",
    ],
    importpath = "github.com/google/go-containerregistry/v1/mutate",
    visibility = ["//visibility:public"],
    deps = [
        "//v1:go_default_library",
        "//v1/partial:go_default_library",
        "//v1/types:go_default_library",
        "//v1/v1util:go_default_library",
        "//vendor/github.com/google/go-cmp/cmp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "append_test.go",
    ],
    data = glob(["testdata/**"]) + [
        ":source_image.tar",  # keep
    ],
    embed = [":go_default_library"],
    deps = [
        "//v1:go_default_library",
        "//v1/tarball:go_default_library",
    ],
)

load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "source_image",
    files = [
        "testdata/bar",
        "testdata/foo",
    ],
)
