load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "image.go",
    ],
    importpath = "github.com/google/go-containerregistry/v1/random",
    visibility = ["//visibility:public"],
    deps = [
        "//name:go_default_library",
        "//v1:go_default_library",
    ],
)
