load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "image.go",
        "write.go",
    ],
    importpath = "github.com/google/go-containerregistry/v1/remote",
    visibility = ["//visibility:public"],
    deps = [
        "//authn:go_default_library",
        "//name:go_default_library",
        "//v1:go_default_library",
        "//v1/remote/transport:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["write_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//authn:go_default_library",
        "//name:go_default_library",
        "//v1:go_default_library",
        "//v1/random:go_default_library",
    ],
)
