load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "image.go",
        "write.go",
    ],
    importpath = "github.com/google/go-containerregistry/v1/tarball",
    visibility = ["//visibility:public"],
    deps = [
        "//name:go_default_library",
        "//v1:go_default_library",
        "//v1/types:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["image_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
)
